# my-credit-card-fraud-classifier

./: .gitignore  LICENSE  README.md  hello.py  pyproject.toml
model/: model_checkpoint_20250518_142154.pth
notebooks/: README.md  eda.ipynb  train.ipynb
notebooks/images/: train_metrics_per_threshold.csv
utils/: architecture.py  figures.py  metrics.py  read_data.py
