[project]
name = "my-credit-card-fraud-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "notebook>=7.4.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
]


[dependency-groups]
dev = [
    "ruff>=0.9.4",
]

[tool.ruff]
line-length = 79
extend-exclude = [
    '.git', 'feasibility_tests','kpi_calculator',
    '.venv', 'docker-config', 'depedencies', 'outputs', '.vscode'
]
fix-only = true
unsafe-fixes = true

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
extend-select = [
    'D', # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
preview = true
quote-style = 'single'
